--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Run Schema Checks
 subtitle: Run schema checks and configure how they're applied to schema changes
-description: Learn how to run, configure, and customize your GraphQL schema checks using Apollo GraphOS Studio or Rover CLI.
+description: Learn how to run GraphQL schema checks—including as part of your CI pipeline—and customize your them using Apollo GraphOS Studio or Rover CLI.
 ---
 
 This guide covers how to run your first schema check, integrate checks into your CI pipeline, and configure checks for your organization's use cases.
